<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_balances"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginBottom="16dp"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/balance_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="#333" />

    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_exchange"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/arrow_down"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:rotation="180"
            android:src="@drawable/red_arrow"
            android:contentDescription="@string/arrow_down" />

        <TextView
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/sell"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/amount_edit_text"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/min_1"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/from_spinner"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_gravity="start" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/arrow_up"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:rotation="180"
            android:src="@drawable/green_arrow"
            android:contentDescription="@string/red_arrow" />

        <TextView
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/receive"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="#4CAF50"
            android:gravity="center_vertical"/>

        <Spinner
            android:id="@+id/to_spinner"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_gravity="start" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:shadowRadius="15"
        android:textColor="#fff"
        android:background="@drawable/button_rounded"/>

</LinearLayout>
